--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "element-ui": "^2.1.0",
     "firebase": "^4.9.0",
+    "moment": "^2.20.1",
+    "moment-timezone": "^0.5.14",
     "node-sass": "^4.7.2",
     "sass-loader": "^6.0.6",
     "vue": "^2.5.2",
