--- a/package.json
+++ b/package.json
@@ -7,14 +7,21 @@
   "scripts": {
     "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
     "start": "npm run dev",
-    "build": "node build/build.js"
+    "build": "node build/build.js",
+    "lint": "eslint --ext .js,.vue src test",
+    "lint-autofix": "eslint --ext .js,.vue src test --fix",
+    "eslint-check": "eslint --print-config .eslintrc.js | eslint-config-prettier-check",
+    "precommit": "npm run lint-check && npm run lint"
   },
   "dependencies": {
     "element-ui": "^2.1.0",
+    "eslint-config-prettier": "^2.9.0",
+    "eslint-plugin-prettier": "^2.6.0",
     "firebase": "^4.9.0",
     "moment": "^2.20.1",
     "moment-timezone": "^0.5.14",
     "node-sass": "^4.7.2",
+    "prettier": "^1.10.2",
     "sass-loader": "^6.0.6",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
@@ -34,6 +41,8 @@
     "chalk": "^2.0.1",
     "copy-webpack-plugin": "^4.0.1",
     "css-loader": "^0.28.0",
+    "eslint": "^4.18.1",
+    "eslint-plugin-vue": "^4.2.2",
     "extract-text-webpack-plugin": "^3.0.0",
     "file-loader": "^1.1.4",
     "friendly-errors-webpack-plugin": "^1.6.1",
